# ctmds1

./: .dockerignore  .gitignore  README.md  api.py  constants.py  docker-compose.yml  main.py  options.py  pyproject.toml  requirements.txt  test.db.wal
.github/workflows/: build_and_publish.yml  main.yml  run_tests.yml  test.yml
db/: db_utils.py  tables.py  utils.py
modelling/: prices.py  seasonality.py
models/: requests.py  responses.py
strategies/: basic_generator.py  numpy_generator.py  price_generator.py
tests/: conftest.py  test_basic_generator.py  test_generator_timer.py  test_main.py  test_models.py  test_numpy_generator.py  test_price_generator.py  test_prices.py  test_seasonality.py  test_tables.py  test_utils.py  test_validations.py
utils/: logger.py  seasonality.py  timer.py  validations.py
